--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/imgs/logo.svg" alt="Logo de la organizacion">
+        <div class="header--title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="" class="header--button">Conoce Nuestros Planes <samp>i</samp></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
