--- a/index.html
+++ b/index.html
@@ -11,14 +11,25 @@
 <body>
     <header>
         <img src="./assets/imgs/logo.svg" alt="Logo de la organizacion">
-        <div class="header--title-container">
+        <div class="header__title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header--button">Conoce Nuestros Planes <span></span></a>
+            <a href="" class="header__button">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="main-exchange-container__backgroundImg"></div>
+            <div class="main-exchange-container__title">
+                <h2>Visibilzamos todas las tasas de cambio.</h2>
+                <p>Traemos informaciòn en tiempo real de las tasas de cambio y las monedas màs importantes del mundo.</p>
+            </div>
+            <section class="main-exchange-container__tables">
+                <div>
+
+                </div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
