--- a/index.html
+++ b/index.html
@@ -24,9 +24,32 @@
                 <h2>Visibilzamos todas las tasas de cambio.</h2>
                 <p>Traemos informaciòn en tiempo real de las tasas de cambio y las monedas màs importantes del mundo.</p>
             </div>
-            <section class="main-exchange-container__tables">
-                <div>
-
+            <section class="main-tables-container">
+                <div class="main-currency-table">
+                    <p class="currency-table__title">Monedas</p>
+                    <div class="currency-table__container">
+                        <table>
+                            <tr>
+                                <td class="table--top-left">Bitcon</td><!--top-left es un modificador segun metodologia BEM-->
+                                <td class="table--top-right table--rigth">$1.96 <span></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ethreum</td>
+                                <td class="table--rigth">$0.07 <span></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table--rigth">$2.17 <span></span></td>
+                            </tr>
+                            <tr>
+                                <td class="teble--bottom-left">Stellar</td>
+                                <td class="table--bottom-rigth table--rigth">$4.96 <span></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table__date">
+                        <p><b>Actualizado:</b> 19 de Julio 23:45</p>
+                    </div>
                 </div>
             </section>
         </section>
