--- a/index.html
+++ b/index.html
@@ -30,25 +30,51 @@
                     <div class="currency-table__container">
                         <table>
                             <tr>
-                                <td class="table--top-left">Bitcon</td><!--top-left es un modificador segun metodologia BEM-->
-                                <td class="table--top-right table--rigth">$1.96 <span></span></td>
+                                <td class="table--top-left">Bitcoin</td><!--top-left es un modificador segun metodologia BEM-->
+                                <td class="table--top-right table--right">$1.96 <span class="down"></span></td>
                             </tr>
                             <tr>
                                 <td>Ethreum</td>
-                                <td class="table--rigth">$0.07 <span></span></td>
+                                <td class="table--right">$0.07 <span class="up"></span></td>
                             </tr>
                             <tr>
                                 <td>Ripple</td>
-                                <td class="table--rigth">$2.17 <span></span></td>
+                                <td class="table--right">$2.17 <span class="down"></span></td>
                             </tr>
                             <tr>
-                                <td class="teble--bottom-left">Stellar</td>
-                                <td class="table--bottom-rigth table--rigth">$4.96 <span></span></td>
+                                <td class="table--bottom-left">Stellar</td>
+                                <td class="table--bottom-right table--right">$4.96 <span class="down"></span></td>
                             </tr>
                         </table>
                     </div>
                     <div class="currency-table__date">
                         <p><b>Actualizado:</b> 19 de Julio 23:45</p>
+                    </div>
+                </div>
+                <div class="main-comisiones-table">
+                    <p class="comisiones-table__title">Comisiones</p>
+                    <div class="comisiones-table__container">
+                        <table>
+                            <tr>
+                                <td class="table--top-left">Bitrade</td><!--top-left es un modificador segun metodologia BEM-->
+                                <td class="table--top-right table--right">$12.96</td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td>
+                                <td class="table--right">$13.07</td>
+                            </tr>
+                            <tr>
+                                <td>Novadex</td>
+                                <td class="table--right">$13.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table--bottom-left">Coinext</td>
+                                <td class="table--bottom-right table--right">$14.96</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="comisiones-table__date">
+                        <p><b>Actualizado:</b> 19 de Julio 23:48</p>
                     </div>
                 </div>
             </section>
