Estructura basica de la seccion beneficios

--- a/index.html
+++ b/index.html
@@ -79,7 +79,20 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="main-product__icon"></span>
+            <div class="main-produc__title">
+                <h2>Creamos un producto sin comparaciòn.</h2>
+                <p>Confiable y diseñado para su uso diario</p>
+            </div>
+            <section class="product-cards__container">
+                <article class="product-detail__card">
+                    <samp class="clock"></samp>
+                    <p class="product__card-title">Tiempo real</p>
+                    <p class="product__card-body">Nuestra API toma informaciòn minuto a minuto sobre las tasas que mas dertermian el comportamiento</p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
