--- a/index.html
+++ b/index.html
@@ -87,9 +87,24 @@
             </div>
             <section class="product-cards__container">
                 <article class="product-detail__card">
-                    <samp class="clock"></samp>
+                    <span class="clock"></span>
                     <p class="product__card-title">Tiempo real</p>
                     <p class="product__card-body">Nuestra API toma informaciòn minuto a minuto sobre las tasas que mas dertermian el comportamiento</p>
+                </article>
+                <article class="product-detail__card">
+                    <span class="eye"></span>
+                    <p class="product__card-title">No hay tasas escondidas </p>
+                    <p class="product__card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estas adquiriendo</p>
+                </article>
+                <article class="product-detail__card">
+                    <span class="moneda"></span>
+                    <p class="product__card-title">Compara monedas</p>
+                    <p class="product__card-body">No màs rumores, con Babtabit sabràs el valor real de cada moneda en el mercado actual</p>
+                </article>
+                <article class="product-detail__card">
+                    <span class="check"></span>
+                    <p class="product__card-title">informaciòn confiable</p>
+                    <p class="product__card-body">Nuestras fuentes estàn 100% verificadas y continuamos auditando su contenido mientras se actualizan</p>
                 </article>
             </section>
         </section>
