Agregando la seccion conocelo hoy

--- a/index.html
+++ b/index.html
@@ -89,26 +89,28 @@
                 <article class="product-detail__card">
                     <span class="clock"></span>
                     <p class="product__card-title">Tiempo real</p>
-                    <p class="product__card-body">Nuestra API toma informaciòn minuto a minuto sobre las tasas que mas dertermian el comportamiento</p>
+                    <p class="product__card-body">Nuestra API toma informaciòn minuto a minuto sobre las tasas que mas dertermian el comportamiento.</p>
                 </article>
                 <article class="product-detail__card">
                     <span class="eye"></span>
                     <p class="product__card-title">No hay tasas escondidas </p>
-                    <p class="product__card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estas adquiriendo</p>
+                    <p class="product__card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estas adquiriendo.</p>
                 </article>
                 <article class="product-detail__card">
                     <span class="moneda"></span>
                     <p class="product__card-title">Compara monedas</p>
-                    <p class="product__card-body">No màs rumores, con Babtabit sabràs el valor real de cada moneda en el mercado actual</p>
+                    <p class="product__card-body">No màs rumores, con Babtabit sabràs el valor real de cada moneda en el mercado actual.</p>
                 </article>
                 <article class="product-detail__card">
                     <span class="check"></span>
                     <p class="product__card-title">informaciòn confiable</p>
-                    <p class="product__card-body">Nuestras fuentes estàn 100% verificadas y continuamos auditando su contenido mientras se actualizan</p>
+                    <p class="product__card-body">Nuestras fuentes estàn 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
                 </article>
             </section>
         </section>
-        <section></section>
+        <section class="bitcoin-img-container">
+            <h2>Conòcelo hoy.</h2>
+        </section>
         <section></section>
     </main>
     <footer></footer>
