--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header__title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header__button">Conoce Nuestros Planes <span></span></a>
+            <a href="#plans" class="header__button">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
@@ -111,7 +111,39 @@
         <section class="bitcoin-img-container">
             <h2>Conòcelo hoy.</h2>
         </section>
-        <section></section>
+        <section id="plans" class="main-plans-container">
+            <div class="plans__title">
+                <h2>Escoje el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="plans-container__slider">
+                <article class="plans-container__card">
+                    <div class="plans-info-container">
+                        <h3 class="plans-card__title">Pago Anual</h3>
+                        <p class="plans-card__price"><span>$ </span>78</p>
+                        <p class="plans-card__saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plans-card__ca">Escoger este<span></span></button>
+                    </div>                    
+                </article>
+                <article class="plans-container__card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plans-info-container">
+                        <h3 class="plans-card__title">Pago Anual</h3>
+                        <p class="plans-card__price"><span>$ </span>99</p>
+                        <p class="plans-card__saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plans-card__ca">Escoger este<span></span></button>
+                    </div>                    
+                </article>
+                <article class="plans-container__card">
+                    <div class="plans-info-container">
+                        <h3 class="plans-card__title">Pago Anual</h3>
+                        <p class="plans-card__price"><span>$ </span>85</p>
+                        <p class="plans-card__saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plans-card__ca">Escoger este<span></span></button>
+                    </div>                    
+                </article>
+            </section>
+        </section>
     </main>
     <footer></footer>
 </body>
