Agregando la seccion de footer

--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-container__link">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>           
+        </section>
+        <section class="footer-container__logo">
+            <picture>
+                <img src="./assets/imgs/logo-footer.svg" alt="Logo de Batatabit 2020">    
+            </picture>
+        </section>
+    </footer>
 </body>
 </html>
